deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restapi-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restapi
  template:
    metadata:
      labels:
        app: restapi
    spec:
      imagePullSecrets:
      - name: pipeline-docker-registry
      containers:
      - name: restapi
        image: ${CICD_IMAGE}:${CICD_EXECUTION_SEQUENCE}
        imagePullPolicy: Always
        ports:
        - name: dev
          hostPort: 18080
          containerPort: 8080
        - name: prod
          hostPort: 18088
          containerPort: 8088
        - name: https
          hostPort: 1443
          containerPort: 443
        resources:
          limits:
            cpu: 1
            memory: 1024Mi
