service-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: restapi-mariadb
  labels:
    app: restapi-service
spec:
  selector:
    app: restapi
  ports:
  - name: dev
    port: 8080
    targetPort: dev
  - name: prod
    port: 8088
    targetPort: prod
  - name: https
    port: 443
    targetPort: https
