service.yml
apiVersion: v1
kind: Service
metadata:
  name: restpi-service
  labels:
    app: restapi
spec:
  selector:
    app: restapi
  ports:
  - name: dev
    port: 8080
    nodePort: 30001
    targetPort: dev
  - name: prod
    port: 8088
    nodePort: 30002
    targetPort: prod
  - name: https
    port: 443
    nodePort: 30003
    targetPort: https
  type: NodePort
